--- a/index.html
+++ b/index.html
@@ -1,108 +1,237 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>KingCast Podcast</title>
   <style>
-    body { font-family: Arial, sans-serif; background-color: #f4f4f4; margin: 0; padding: 20px; }
-    h1 { text-align: center; color: #333; }
-    .cover { display: block; margin: 0 auto 20px; max-width: 100%; border-radius: 10px; }
-    .folder { background: #fff; margin: 10px auto; border-radius: 10px; max-width: 700px; box-shadow: 0 2px 8px rgba(0,0,0,0.1); }
-    .folder-header { padding: 15px; cursor: pointer; font-size: 1.2em; font-weight: bold; border-bottom: 1px solid #ddd; }
-    .folder-content { display: none; padding: 10px 15px; }
-    .podcast { margin-bottom: 15px; }
-    audio { width: 100%; margin-top: 5px; }
+    body{font-family:Arial, sans-serif;background:#f5f6f8;margin:0;padding:20px}
+    h1{text-align:center;margin:0 0 16px}
+    .cover{display:block;margin:0 auto 16px;max-width:240px;border-radius:12px}
+    .container{max-width:900px;margin:0 auto}
+    .muted{color:#666;font-size:12px}
+    .folder{background:#fff;border-radius:12px;box-shadow:0 4px 16px rgba(0,0,0,.06);margin:12px 0;overflow:hidden}
+    .folder-header{display:flex;align-items:center;justify-content:space-between;gap:12px;padding:14px 16px;cursor:pointer}
+    .folder-header:hover{background:#fafafa}
+    .folder-title{font-weight:700}
+    .chevron{transition:transform .2s ease}
+    .folder.open .chevron{transform:rotate(90deg)}
+    .folder-body{display:none;border-top:1px solid #eee;padding:8px 12px 14px}
+    .folder.open .folder-body{display:block}
+    .podcast{background:#fff;border:1px solid #eee;border-radius:10px;padding:12px;margin:10px 0}
+    .podcast h3{margin:0 0 6px;font-size:16px}
+    audio{width:100%;margin-top:6px}
+    .err{color:#b00020;font-size:12px;margin-top:6px}
   </style>
 </head>
 <body>
-  <h1>🎙️ KingCast Podcast</h1>
-  <img src="kingCast.png" alt="Capa do Podcast" class="cover">
+  <div class="container">
+    <h1>🎙️ KingCast Podcast</h1>
+    <img src="kingCast.png" alt="Capa do Podcast" class="cover" />
+    <p class="muted">Clique em um tema para ver/ocultar os áudios. Ao terminar um, o próximo do mesmo tema toca automaticamente.</p>
+    <div id="folders"></div>
+  </div>
 
-  <div id="folders"></div>
+<script>
+const repoOwner = "jhoelrodriguespodcast";
+const repoName  = "kingcast";
 
-  <script>
-    const repoOwner = "jhoelrodriguespodcast";
-    const repoName = "kingcast";
+let defaultBranch = "main"; // será confirmado pela API
 
-    // Função para formatar nomes
-    function niceTitle(name) {
-      return name.replace(/\.mp3$/i, '').replace(/[_-]/g, ' ');
-    }
+async function getDefaultBranch(){
+  const res = await fetch(`https://api.github.com/repos/${repoOwner}/${repoName}`);
+  if(res.ok){
+    const data = await res.json();
+    defaultBranch = data.default_branch || "main";
+  }
+}
 
-    // Accordion de abrir/fechar
-    function toggleFolder(folderId) {
-      const content = document.getElementById(folderId);
-      content.style.display = content.style.display === "block" ? "none" : "block";
-    }
+// Util: monta a melhor URL possível pro áudio, com fallback
+function buildRawUrl(path){
+  return `https://raw.githubusercontent.com/${repoOwner}/${repoName}/${defaultBranch}/${path}`;
+}
+function buildMediaUrl(path){
+  return `https://media.githubusercontent.com/media/${repoOwner}/${repoName}/${defaultBranch}/${path}`;
+}
+function bestAudioUrl(file){
+  // Se a API já deu download_url, usamos; senão tentamos raw
+  return file.download_url || buildRawUrl(file.path);
+}
 
-    // Função autoplay do próximo
-    function playNext(currentAudio) {
-      const allAudios = [...document.querySelectorAll("audio")];
-      const index = allAudios.indexOf(currentAudio);
-      if (index >= 0 && index < allAudios.length - 1) {
-        allAudios[index + 1].play();
-      }
-    }
+function niceTitle(filename){
+  return filename.replace(/\.mp3$/i,'').replace(/[_\-]+/g,' ').trim();
+}
 
-    async function loadFolders() {
-      try {
-        // Pega lista de pastas
-        const res = await fetch(`https://api.github.com/repos/${repoOwner}/${repoName}/contents`);
-        const items = await res.json();
-        const folders = items.filter(i => i.type === "dir");
+async function listRoot(){
+  const res = await fetch(`https://api.github.com/repos/${repoOwner}/${repoName}/contents`);
+  if(!res.ok) throw new Error("Não foi possível listar o repositório.");
+  return res.json();
+}
+async function listFolder(url){
+  const res = await fetch(url);
+  if(!res.ok) throw new Error("Não foi possível listar a pasta.");
+  return res.json();
+}
 
-        const container = document.getElementById("folders");
+// Acordeão
+function createFolderCard(folder){
+  const card = document.createElement('div');
+  card.className = 'folder';
+  card.dataset.loaded = 'false';
 
-        for (const folder of folders) {
-          const folderId = "folder_" + folder.name;
+  card.innerHTML = `
+    <div class="folder-header">
+      <div class="folder-title">📂 ${folder.name}</div>
+      <div class="chevron">▶</div>
+    </div>
+    <div class="folder-body">
+      <div class="muted">Carregando áudios…</div>
+    </div>
+  `;
 
-          // Cria container da pasta
-          const folderDiv = document.createElement("div");
-          folderDiv.className = "folder";
-          folderDiv.innerHTML = `
-            <div class="folder-header" onclick="toggleFolder('${folderId}')">
-              📂 ${folder.name}
-            </div>
-            <div class="folder-content" id="${folderId}"></div>
-          `;
-          container.appendChild(folderDiv);
+  const header = card.querySelector('.folder-header');
+  const body   = card.querySelector('.folder-body');
 
-          // Pega arquivos dentro da pasta
-          const resFiles = await fetch(folder.url);
-          const files = await resFiles.json();
-          const mp3Files = files.filter(f => f.name.toLowerCase().endsWith(".mp3"));
+  header.addEventListener('click', async () => {
+    const isOpen = card.classList.toggle('open');
 
-          // Ordena pelos commits mais recentes
-          const filesWithDate = await Promise.all(mp3Files.map(async file => {
-            const commitRes = await fetch(`https://api.github.com/repos/${repoOwner}/${repoName}/commits?path=${file.path}&per_page=1`);
-            const commitData = await commitRes.json();
-            const date = new Date(commitData[0].commit.committer.date);
-            return { ...file, date };
-          }));
-          filesWithDate.sort((a, b) => b.date - a.date);
+    // Carrega os áudios apenas quando abrir a primeira vez
+    if (isOpen && card.dataset.loaded === 'false') {
+      try{
+        const files = await listFolder(folder.url);
+        const mp3s  = files.filter(f => f.type === 'file' && f.name.toLowerCase().endsWith('.mp3'));
 
-          // Renderiza áudios dentro da pasta
-          const folderContent = document.getElementById(folderId);
-          filesWithDate.forEach(file => {
-            const div = document.createElement("div");
-            div.className = "podcast";
-            div.innerHTML = `
-              <h3>${niceTitle(file.name)}</h3>
-              <audio controls preload="none" onended="playNext(this)">
-                <source src="${file.download_url}" type="audio/mpeg">
-                Seu navegador não suporta áudio HTML5.
-              </audio>
-            `;
-            folderContent.appendChild(div);
-          });
+        if(mp3s.length === 0){
+          body.innerHTML = `<div class="muted">Nenhum áudio encontrado neste tema.</div>`;
+          card.dataset.loaded = 'true';
+          return;
         }
-      } catch (err) {
-        console.error("Erro ao carregar pastas:", err);
+
+        // Ordenar por data de commit (mais recente primeiro)
+        const withDate = await Promise.all(mp3s.map(async file => {
+          try{
+            const commitRes = await fetch(`https://api.github.com/repos/${repoOwner}/${repoName}/commits?path=${file.path}&per_page=1`);
+            if(commitRes.ok){
+              const commitData = await commitRes.json();
+              const date = new Date(commitData[0].commit.committer.date);
+              return { ...file, date };
+            }
+          }catch(e){}
+          return { ...file, date: new Date(0) };
+        }));
+        withDate.sort((a,b) => b.date - a.date);
+
+        const frag = document.createDocumentFragment();
+
+        withDate.forEach(file => {
+          const div = document.createElement('div');
+          div.className = 'podcast';
+
+          // URL primária e alternativa
+          const primary = bestAudioUrl(file);
+          const fallback = buildMediaUrl(file.path);
+
+          // Criar elementos
+          const h3 = document.createElement('h3');
+          h3.textContent = niceTitle(file.name);
+
+          const audio = document.createElement('audio');
+          audio.setAttribute('controls','');
+          audio.setAttribute('preload','none');
+          audio.setAttribute('crossorigin','anonymous');
+          audio.dataset.primary = primary;
+          audio.dataset.fallback = fallback;
+          audio.src = primary;
+
+          // quando terminar, toca o próximo dentro da MESMA pasta
+          audio.addEventListener('ended', () => playNextInSameFolder(audio));
+
+          // erro de carregamento → tenta fallback (media.githubusercontent)
+          audio.addEventListener('error', () => {
+            // se já tentou fallback, mostra erro
+            if (audio.dataset.triedFallback === '1') {
+              showError(div, 'Não foi possível carregar este áudio. Baixe pelo link abaixo.');
+              return;
+            }
+            audio.dataset.triedFallback = '1';
+            audio.src = audio.dataset.fallback;
+            audio.load();
+            // tenta tocar após trocar a fonte
+            audio.play().catch(()=>{ /* ignora bloqueio de autoplay sem interação */ });
+          });
+
+          // link de download (útil se o player não tocar)
+          const a = document.createElement('a');
+          a.href = primary;
+          a.target = "_blank";
+          a.rel = "noopener";
+          a.textContent = "Baixar este episódio";
+
+          div.appendChild(h3);
+          div.appendChild(audio);
+          div.appendChild(a);
+          frag.appendChild(div);
+        });
+
+        body.innerHTML = '';
+        body.appendChild(frag);
+        card.dataset.loaded = 'true';
+      }catch(e){
+        body.innerHTML = `<div class="muted">Erro ao carregar: ${e.message}</div>`;
       }
     }
+  });
 
-    loadFolders();
-  </script>
+  return card;
+}
+
+function showError(container, msg){
+  let p = container.querySelector('.err');
+  if(!p){
+    p = document.createElement('p');
+    p.className = 'err';
+    container.appendChild(p);
+  }
+  p.textContent = msg;
+}
+
+// toca o próximo áudio dentro da mesma pasta
+function playNextInSameFolder(currentAudio){
+  const folderBody = currentAudio.closest('.folder-body');
+  if(!folderBody) return;
+  const audios = [...folderBody.querySelectorAll('audio')];
+  const idx = audios.indexOf(currentAudio);
+  if(idx >= 0 && idx < audios.length - 1){
+    const next = audios[idx + 1];
+    next.play().catch(()=>{ /* usuário precisa apertar play em alguns navegadores */ });
+  }
+}
+
+(async function init(){
+  try{
+    await getDefaultBranch();
+    const rootItems = await listRoot();
+    const folders = rootItems.filter(i => i.type === 'dir');
+
+    const container = document.getElementById('folders');
+
+    // opcional: "Deus" primeiro
+    folders.sort((a,b) => {
+      if (a.name.toLowerCase() === 'deus') return -1;
+      if (b.name.toLowerCase() === 'deus') return 1;
+      return a.name.localeCompare(b.name, 'pt-BR', {numeric:true});
+    });
+
+    if (folders.length === 0){
+      container.innerHTML = `<div class="muted">Nenhum tema/pasta encontrado.</div>`;
+      return;
+    }
+
+    folders.forEach(f => container.appendChild(createFolderCard(f)));
+  }catch(err){
+    document.getElementById('folders').innerHTML = `<div class="muted">Erro: ${err.message}</div>`;
+  }
+})();
+</script>
 </body>
 </html>
