--- a/index.html
+++ b/index.html
@@ -2,158 +2,6 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>KingCast Podcast</title>
-  <style>
-    body{font-family:Arial,sans-serif;background:#f5f6f8;margin:0;padding:20px}
-    h1{text-align:center;color:#333;margin:0 0 16px}
-    .cover{display:block;margin:0 auto 16px;max-width:240px;border-radius:12px}
-    .container{max-width:900px;margin:0 auto}
-    .muted{color:#666;font-size:12px}
-    .folder{background:#fff;border-radius:12px;box-shadow:0 4px 16px rgba(0,0,0,.06);margin:12px 0;overflow:hidden}
-    .folder-header{display:flex;align-items:center;justify-content:space-between;gap:12px;padding:14px 16px;cursor:pointer}
-    .folder-header:hover{background:#fafafa}
-    .folder-title{font-weight:700}
-    .chevron{transition:transform .2s ease}
-    .folder.open .chevron{transform:rotate(90deg)}
-    .folder-body{display:none;border-top:1px solid #eee;padding:8px 12px 14px}
-    .folder.open .folder-body{display:block}
-    .podcast{background:#fff;border:1px solid #eee;border-radius:10px;padding:12px;margin:10px 0}
-    .podcast h3{margin:0 0 6px;font-size:16px}
-    audio{width:100%}
-  </style>
-</head>
-<body>
-  <div class="container">
-    <h1>🎙️ KingCast Podcast</h1>
-    <img src="kingCast.png" alt="Capa do Podcast" class="cover" />
-    <p class="muted">Clique em um tema para ver/ocultar os áudios.</p>
-    <div id="folders"></div>
-  </div>
-
-<script>
-const repoOwner = "jhoelrodriguespodcast";
-const repoName  = "kingcast";
-
-async function listRoot() {
-  const res = await fetch(`https://api.github.com/repos/${repoOwner}/${repoName}/contents`);
-  if (!res.ok) throw new Error("Não foi possível listar o repositório.");
-  return res.json();
-}
-async function listFolder(folderUrl){
-  const res = await fetch(folderUrl);
-  if (!res.ok) throw new Error("Não foi possível listar a pasta.");
-  return res.json();
-}
-function niceTitle(filename){
-  return filename.replace(/\.mp3$/i,'').replace(/[_\-]+/g,' ').trim();
-}
-
-function createFolderCard(folder){
-  const card = document.createElement('div');
-  card.className = 'folder';
-  card.dataset.loaded = 'false';
-  card.innerHTML = `
-    <div class="folder-header">
-      <div class="folder-title">📂 ${folder.name}</div>
-      <div class="chevron">▶</div>
-    </div>
-    <div class="folder-body">
-      <div class="muted">Carregando áudios…</div>
-    </div>
-  `;
-
-  const header = card.querySelector('.folder-header');
-  const body   = card.querySelector('.folder-body');
-
-  header.addEventListener('click', async () => {
-    const isOpen = card.classList.toggle('open');
-
-    if (isOpen && card.dataset.loaded === 'false') {
-      try{
-        const files = await listFolder(folder.url);
-        const mp3s  = files.filter(f => f.type === 'file' && f.name.toLowerCase().endsWith('.mp3'));
-
-        if (mp3s.length === 0) {
-          body.innerHTML = `<div class="muted">Nenhum áudio encontrado neste tema.</div>`;
-        } else {
-          // Ordena por nome; se quiser por data de commit dá para reativar depois
-          mp3s.sort((a,b) => a.name.localeCompare(b.name, 'pt-BR', {numeric:true}));
-
-          const frag = document.createDocumentFragment();
-          mp3s.forEach(file => {
-            // URL preferencial: servir do próprio Netlify (mesmo domínio)
-            const netlifyUrl = '/' + encodeURI(file.path); // ex.: /Deus/episodio%201.mp3
-            const div = document.createElement('div');
-            div.className = 'podcast';
-            div.innerHTML = `
-              <h3>${niceTitle(file.name)}</h3>
-              <audio
-                controls
-                preload="none"
-                src="${netlifyUrl}"
-                data-raw="${file.download_url}"
-                onended="playNext(this)"
-                onerror="fallbackToRaw(this)"
-              ></audio>
-            `;
-            frag.appendChild(div);
-          });
-          body.innerHTML = '';
-          body.appendChild(frag);
-        }
-        card.dataset.loaded = 'true';
-      }catch(e){
-        body.innerHTML = `<div class="muted">Erro ao carregar: ${e.message}</div>`;
-      }
-    }
-  });
-
-  return card;
-}
-
-// Tocar o próximo áudio dentro da MESMA pasta
-function playNext(currentAudio) {
-  const container = currentAudio.closest('.folder-body');
-  if (!container) return;
-  const audios = [...container.querySelectorAll('audio')];
-  const i = audios.indexOf(currentAudio);
-  if (i >= 0 && i < audios.length - 1) {
-    audios[i + 1].play().catch(()=>{});
-  }
-}
-
-// Fallback: se o arquivo do Netlify falhar (404), tenta o raw do GitHub
-function fallbackToRaw(audioEl){
-  if (audioEl.dataset.fallback === '1') return; // evita loop
-  const raw = audioEl.dataset.raw;
-  if (raw) {
-    audioEl.dataset.fallback = '1';
-    audioEl.src = raw;
-    audioEl.load();
-    // se o usuário clicou, respeita a intenção e tenta tocar
-    audioEl.play().catch(()=>{});
-  }
-}
-
-(async function init(){
-  try{
-    const rootItems = await listRoot();
-    const folders = rootItems.filter(i => i.type === 'dir');
-
-    const container = document.getElementById('folders');
-    folders.sort((a,b) => {
-      if (a.name.toLowerCase() === 'deus') return -1;
-      if (b.name.toLowerCase() === 'deus') return 1;
-      return a.name.localeCompare(b.name, 'pt-BR', {numeric:true});
-    });
-
-    if (folders.length === 0){
-      container.innerHTML = `<div class="muted">Nenhum tema/pasta encontrado.</div>`;
-      return;<!DOCTYPE html>
-<html lang="pt-BR">
-<head>
-  <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>KingCast Podcast</title>
   <style>
@@ -235,30 +83,34 @@ function createFolderCard(folder){
   header.addEventListener('click', async () => {
     const isOpen = card.classList.toggle('open');
     if (isOpen && card.dataset.loaded === 'false') {
-      const files = await listFolder(folder.url);
-      const mp3s  = files.filter(f => f.type === 'file' && f.name.toLowerCase().endsWith('.mp3'));
-      if(mp3s.length === 0){
-        body.innerHTML = `<div class="muted">Nenhum áudio neste tema.</div>`;
+      try {
+        const files = await listFolder(folder.url);
+        const mp3s  = files.filter(f => f.type === 'file' && f.name.toLowerCase().endsWith('.mp3'));
+        if(mp3s.length === 0){
+          body.innerHTML = `<div class="muted">Nenhum áudio neste tema.</div>`;
+          card.dataset.loaded = 'true';
+          return;
+        }
+
+        const frag = document.createDocumentFragment();
+        mp3s.forEach(file => {
+          const div = document.createElement('div');
+          div.className = 'podcast';
+          div.innerHTML = `
+            <h3>${niceTitle(file.name)}</h3>
+            <audio controls preload="none">
+              <source src="${rawUrl(file.path)}" type="audio/mpeg">
+            </audio>
+          `;
+          frag.appendChild(div);
+        });
+
+        body.innerHTML = '';
+        body.appendChild(frag);
         card.dataset.loaded = 'true';
-        return;
+      } catch(err){
+        body.innerHTML = `<div class="muted">Erro ao carregar áudios: ${err.message}</div>`;
       }
-
-      const frag = document.createDocumentFragment();
-      mp3s.forEach(file => {
-        const div = document.createElement('div');
-        div.className = 'podcast';
-        div.innerHTML = `
-          <h3>${niceTitle(file.name)}</h3>
-          <audio controls preload="none">
-            <source src="${rawUrl(file.path)}" type="audio/mpeg">
-          </audio>
-        `;
-        frag.appendChild(div);
-      });
-
-      body.innerHTML = '';
-      body.appendChild(frag);
-      card.dataset.loaded = 'true';
     }
   });
 
@@ -266,27 +118,22 @@ function createFolderCard(folder){
 }
 
 (async function init(){
-  await getDefaultBranch();
-  const rootItems = await listRoot();
-  const folders = rootItems.filter(i => i.type === 'dir');
+  try {
+    await getDefaultBranch();
+    const rootItems = await listRoot();
+    const folders = rootItems.filter(i => i.type === 'dir');
 
-  const container = document.getElementById('folders');
-  if (folders.length === 0){
-    container.innerHTML = `<div class="muted">Nenhum tema/pasta encontrado.</div>`;
-    return;
-  }
-
-  folders.forEach(f => container.appendChild(createFolderCard(f)));
-})();
-</script>
-</body>
-</html>
-
+    const container = document.getElementById('folders');
+    if (folders.length === 0){
+      container.innerHTML = `<div class="muted">Nenhum tema/pasta encontrado.</div>`;
+      return;
     }
 
     folders.forEach(f => container.appendChild(createFolderCard(f)));
-  }catch(err){
-    document.getElementById('folders').innerHTML = `<div class="muted">Erro: ${err.message}</div>`;
+  } catch(err){
+    document.getElementById('folders').innerHTML = `
+      <div class="muted">Erro: ${err.message}</div>
+    `;
   }
 })();
 </script>
