--- a/index.html
+++ b/index.html
@@ -7,80 +7,81 @@
   <style>
     body { font-family: Arial, sans-serif; background-color: #f4f4f4; margin: 0; padding: 20px; }
     h1 { text-align: center; color: #333; }
-    .folder { background: #fff; padding: 15px; margin: 15px auto; border-radius: 10px;
-              max-width: 600px; box-shadow: 0 2px 8px rgba(0,0,0,0.1); cursor: pointer; }
-    .folder h2 { margin: 0; }
-    .files { display: none; margin-top: 10px; }
-    .podcast { margin: 10px 0; }
-    audio { width: 100%; margin-top: 5px; }
+    .folder { background: #fff; padding: 15px; margin: 15px auto; border-radius: 10px; max-width: 600px; box-shadow: 0 2px 8px rgba(0,0,0,0.1); cursor: pointer; }
+    .episodes { display: none; margin-top: 10px; }
+    .podcast { background: #fafafa; padding: 10px; margin: 10px 0; border-radius: 8px; box-shadow: 0 1px 4px rgba(0,0,0,0.05); }
+    audio { width: 100%; margin-top: 8px; }
   </style>
 </head>
 <body>
   <h1>🎙️ KingCast Podcast</h1>
+  <img src="kingCast.png" alt="Capa do Podcast" class="cover">
+
   <div id="folders"></div>
 
   <script>
     const repoOwner = "jhoelrodriguespodcast";
     const repoName = "kingcast";
+    const folders = ["Deus"]; // aqui você pode adicionar outros temas futuramente
 
-    async function loadFolders() {
-      try {
-        // Lista conteúdo do repositório (pasta raiz)
-        const res = await fetch(`https://api.github.com/repos/${repoOwner}/${repoName}/contents/`);
-        const items = await res.json();
+    async function loadFolder(folder) {
+      const res = await fetch(`https://api.github.com/repos/${repoOwner}/${repoName}/contents/${folder}`);
+      const files = await res.json();
 
-        // Pega apenas pastas (como "Deus", etc.)
-        const folders = items.filter(item => item.type === "dir");
+      // filtra só .mp3
+      const mp3Files = files.filter(file => file.name.toLowerCase().endsWith(".mp3"));
 
-        const container = document.getElementById("folders");
+      // ordena pela data do commit mais recente
+      const filesWithDate = await Promise.all(mp3Files.map(async file => {
+        const commitRes = await fetch(`https://api.github.com/repos/${repoOwner}/${repoName}/commits?path=${file.path}&per_page=1`);
+        const commitData = await commitRes.json();
+        const date = new Date(commitData[0].commit.committer.date);
+        return { ...file, date };
+      }));
+      filesWithDate.sort((a, b) => b.date - a.date);
 
-        for (const folder of folders) {
-          const folderDiv = document.createElement("div");
-          folderDiv.className = "folder";
-          folderDiv.innerHTML = `<h2>${folder.name}</h2>`;
-
-          const filesDiv = document.createElement("div");
-          filesDiv.className = "files";
-
-          // Buscar os arquivos dentro da pasta
-          const resFiles = await fetch(`https://api.github.com/repos/${repoOwner}/${repoName}/contents/${folder.name}`);
-          const files = await resFiles.json();
-          const mp3Files = files.filter(f => f.name.toLowerCase().endsWith(".mp3"));
-
-          mp3Files.forEach(file => {
-            const epDiv = document.createElement("div");
-            epDiv.className = "podcast";
-
-            // Gera link RAW do GitHub (streaming direto)
-            const rawUrl = `https://raw.githubusercontent.com/${repoOwner}/${repoName}/main/${folder.name}/${file.name}`;
-
-            epDiv.innerHTML = `
-              <h3>${file.name.replace(/\.mp3$/i, '')}</h3>
-              <audio controls>
-                <source src="${rawUrl}" type="audio/mpeg">
-                Seu navegador não suporta áudio HTML5.
-              </audio>
-            `;
-            filesDiv.appendChild(epDiv);
-          });
-
-          folderDiv.appendChild(filesDiv);
-
-          // Clicar no título da pasta abre/fecha lista
-          folderDiv.querySelector("h2").addEventListener("click", () => {
-            filesDiv.style.display = filesDiv.style.display === "none" ? "block" : "none";
-          });
-
-          container.appendChild(folderDiv);
-        }
-      } catch (err) {
-        document.getElementById("folders").innerHTML = `
-          <p style="color:red;">Erro: ${err.message}</p>
-        `;
-      }
+      return filesWithDate;
     }
 
-    loadFolders();
+    function createFolderCard(folderName, episodes) {
+      const div = document.createElement("div");
+      div.className = "folder";
+      div.innerHTML = `<h2>${folderName}</h2>`;
+
+      const epContainer = document.createElement("div");
+      epContainer.className = "episodes";
+
+      episodes.forEach(file => {
+        const epDiv = document.createElement("div");
+        epDiv.className = "podcast";
+        epDiv.innerHTML = `
+          <h3>${file.name.replace(/\.mp3$/i, "")}</h3>
+          <audio controls>
+            <source src="https://cdn.jsdelivr.net/gh/${repoOwner}/${repoName}/${folderName}/${encodeURIComponent(file.name)}" type="audio/mpeg">
+            Seu navegador não suporta áudio HTML5.
+          </audio>
+        `;
+        epContainer.appendChild(epDiv);
+      });
+
+      div.appendChild(epContainer);
+
+      // abre/fecha ao clicar
+      div.querySelector("h2").addEventListener("click", () => {
+        epContainer.style.display = epContainer.style.display === "none" ? "block" : "none";
+      });
+
+      return div;
+    }
+
+    (async function init() {
+      const container = document.getElementById("folders");
+      for (let folder of folders) {
+        const episodes = await loadFolder(folder);
+        const card = createFolderCard(folder, episodes);
+        container.appendChild(card);
+      }
+    })();
   </script>
 </body>
 </html>
